[gd_scene load_steps=7 format=3]

[ext_resource type="PackedScene" path="res://entities/player/actions/combat_action.tscn" id="1_m1yej"]
[ext_resource type="Script" path="res://modules/characters/player/actions/close_range_attack.gd" id="2_pqhe8"]
[ext_resource type="PackedScene" uid="uid://dqxgohkyv1380" path="res://modules/hitbox/hitbox.tscn" id="3_ri20f"]

[sub_resource type="Curve2D" id="Curve2D_63ks6"]
_data = {
"points": PackedVector2Array(-17.5339, -5.66964, 17.5339, 5.66964, 0, -19, 0.209987, -5.14468, -0.209987, 5.14468, 18, 0, 17.4289, -5.14468, -17.4289, 5.14468, 0, 17)
}
point_count = 3

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_a08x7"]
size = Vector2(5, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0o6i7"]
size = Vector2(5, 35)

[node name="CloseRangeAttack" instance=ExtResource("1_m1yej")]
script = ExtResource("2_pqhe8")
dist_from_player = 5
attack_time = 0.15

[node name="MeleePath" type="Path2D" parent="." index="0"]
process_mode = 3
curve = SubResource("Curve2D_63ks6")

[node name="MeleePathFollow" type="PathFollow2D" parent="MeleePath" index="0"]
position = Vector2(0, -19)
rotation = 0.312742

[node name="Hitbox" parent="MeleePath/MeleePathFollow" index="0" instance=ExtResource("3_ri20f")]
visible = false
position = Vector2(0.757776, -13.9078)
collision_layer = 16
collision_mask = 2
damage = 1

[node name="Sprite2D" type="Sprite2D" parent="MeleePath/MeleePathFollow/Hitbox" index="0"]
modulate = Color(0.117647, 0.0941176, 0.431373, 1)
texture = SubResource("PlaceholderTexture2D_a08x7")

[node name="Collision" parent="MeleePath/MeleePathFollow/Hitbox" index="1"]
shape = SubResource("RectangleShape2D_0o6i7")
disabled = true

[node name="AimLine" type="Line2D" parent="MeleePath" index="1"]
visible = false
points = PackedVector2Array(0, -22, 28, 0, 0, 18)
width = 4.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[editable path="MeleePath/MeleePathFollow/Hitbox"]
